# DSA

./: CMakeLists.txt
LeetCode/Medium/: ReverseInteger.c
Lists/: Insert.c  delete.c  first.c
PracticeC/: dsaCalc.c
PracticeC/KnowYourMaths/: q1.c  q2.c  q5.c
PracticeC/PatternsPrac/: q1.c  q11.c  q12.c  q14.c  q18.c  q19.c  q2.c  q22.c  q4.c  q5.c  q7.c  q8.c  q9.c
PracticeC/PointersPrac/: q1.c  q2.c
Striver/: hello.c  tp.c
Striver/Arrays/Easy/: LargestElement.c  LeftRotateBy1.c  LeftRotateByK.cpp  LinearSearch.c  RemoveDuplicateFromSorted.c  SecondLargest.c  UnionOf2SortedArrays.c  ZerosToEnd.c
Striver/BasicRecursion/: q1.c  q3.c  q4.c  q5.c  q6.c  q7.c  q8.c  q9.c
Striver/Hashing/: basic(findMax).c  basic(stringInput).c  basic.c
Striver/KnowYourMaths/: q3.c  q4.c  q6.c  q7.c
Striver/PatternsPrac/: q10.c  q13.c  q15.c  q16.c  q17.c  q2.c  q20.c  q21.c  q3.c  q6.c  q9.c
Striver/Sorting-1/: SelectionSort(Classic).c  SelectionSort(MoreSwaps).c
Striver/Sorting-2/: MergeSort(For).c  RecursiveBubble.c  RecursiveInsertion.c
