cmake_minimum_required(VERSION 4.1)
project(DSA C)

set(CMAKE_C_STANDARD 11)

add_executable(DSA main.c
        PracticeC/hello.c
        PracticeC/tp.c
        PracticeC/dsaCalc.c
        Lists/Insert.c
        Lists/delete.c
        PracticeC/PointersPrac/q1.c
        PracticeC/PointersPrac/q2.c
        PracticeC/PatternsPrac/q1.c
        PracticeC/PatternsPrac/q2.c
        PracticeC/PatternsPrac/q3.c
        PracticeC/PatternsPrac/q4.c
        PracticeC/PatternsPrac/q5.c
        PracticeC/PatternsPrac/q6.c
        PracticeC/PatternsPrac/q7.c
        PracticeC/PatternsPrac/q8.c
        PracticeC/PatternsPrac/q9.c
        PracticeC/PatternsPrac/q10.c
        PracticeC/PatternsPrac/q11.c
        PracticeC/PatternsPrac/q12.c
        PracticeC/PatternsPrac/q13.c
        PracticeC/PatternsPrac/q14.c
        PracticeC/PatternsPrac/q15.c
        PracticeC/PatternsPrac/q16.c
        PracticeC/PatternsPrac/q17.c
        PracticeC/PatternsPrac/q18.c
        PracticeC/PatternsPrac/q19.c
        PracticeC/PatternsPrac/q20.c
        PracticeC/PatternsPrac/q21.c
        PracticeC/PatternsPrac/q22.c
        PracticeC/KnowYourMaths/q1.c
        PracticeC/KnowYourMaths/q2.c
        PracticeC/KnowYourMaths/q3.c
        PracticeC/KnowYourMaths/q4.c
        PracticeC/KnowYourMaths/q5.c
        PracticeC/KnowYourMaths/q6.c
        PracticeC/KnowYourMaths/q7.c
        PracticeC/BasicRecursion/q1.c
        PracticeC/BasicRecursion/q3.c
        PracticeC/BasicRecursion/q4.c
        PracticeC/BasicRecursion/q5.c
        PracticeC/BasicRecursion/q6.c
        PracticeC/BasicRecursion/q7.c
        PracticeC/BasicRecursion/q8.c
        PracticeC/BasicRecursion/q9.c
        PracticeC/Hashing/basic.c
        "PracticeC/Hashing/basic(findMax).c"
        "PracticeC/Hashing/basic(stringInput).c"
)
